fixing the entity delete with id map