@@ -31,7 +31,9 @@ class EntityAttributeMappingTest {
   void returnsMappingFromConfig() {
     EntityAttributeMapping attributeMapping =
         new EntityAttributeMapping(
-            this.mockAttributeClient, Map.of("some-id", "attributes.some-key"));
+            this.mockAttributeClient,
+            Map.of("some-id", "attributes.some-key"),
+            Collections.emptyMap());
 
     assertEquals(
         Optional.of("attributes.some-key"),
@@ -45,7 +47,8 @@ class EntityAttributeMappingTest {
   void returnsMappingFromAttributeService() {
     when(mockRequestContext.call(any())).thenCallRealMethod();
     EntityAttributeMapping attributeMapping =
-        new EntityAttributeMapping(this.mockAttributeClient, Collections.emptyMap());
+        new EntityAttributeMapping(
+            this.mockAttributeClient, Collections.emptyMap(), Collections.emptyMap());
     AttributeMetadata sourcelessMetadata =
         AttributeMetadata.newBuilder().setKey("some-key").build();
     when(this.mockAttributeClient.get("some-id")).thenReturn(Single.just(sourcelessMetadata));
@@ -68,7 +71,8 @@ class EntityAttributeMappingTest {
   void returnsEmptyIfNoMapping() {
     when(mockRequestContext.call(any())).thenCallRealMethod();
     EntityAttributeMapping attributeMapping =
-        new EntityAttributeMapping(this.mockAttributeClient, Collections.emptyMap());
+        new EntityAttributeMapping(
+            this.mockAttributeClient, Collections.emptyMap(), Collections.emptyMap());
     when(this.mockAttributeClient.get("some-id")).thenReturn(Single.error(new RuntimeException()));
 
     // Empty result, since attribute client threw error
@@ -81,7 +85,8 @@ class EntityAttributeMappingTest {
   void testIsMultiValueAttribute() {
     when(mockRequestContext.call(any())).thenCallRealMethod();
     EntityAttributeMapping attributeMapping =
-        new EntityAttributeMapping(this.mockAttributeClient, Collections.emptyMap());
+        new EntityAttributeMapping(
+            this.mockAttributeClient, Collections.emptyMap(), Collections.emptyMap());
     AttributeMetadata singleValueAttributeData =
         AttributeMetadata.newBuilder()
             .setKey("some-key")
